# IndeedGameEngine

./: CMakeLists.txt  CMakeSettings.json  README.md  vc140.idb
include/: Cam.h  Cube.h  EBO.h  Inputs.h  KeyMacros.h  Shaders.h  Textures.h  VAO.h  VBO.h  WindowManager.h  fps.h
newbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  openGLfirst.sln  openGLfirst.vcxproj  openGLfirst.vcxproj.filters
res/: frag.glsl
src/: Cam.cpp  EBO.cpp  Fps.cpp  Inputs.cpp  Shaders.cpp  Texture.cpp  VAO.cpp  VBO.cpp  WindowManager.cpp  main.cpp
